--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-- TODO Include Bootstrap source, compile the LESS into CSS
++ DONE Include Bootstrap source, compile the LESS into CSS
 - TODO Make layout frontpage and limit line width
   - Use .content-column to limit line width
 - TODO Increase base font size
