--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@ DONE Include Bootstrap source, compile the LESS into CSS
 DONE Make layout frontpage and limit line width
 DONE General facelift: fonts, frontpage title, typography
   Separate index and intro pages
-TODO Increase base font size
-  - Double check whether all font sizes scale according to it
+DONE Increase base font size
 TODO Relayout documentation layout with col-sm-8
 TODO Replace .content-column with Bootstrap's own col-sm-8
 TODO Define Rx color palette
